# iron

./: .gitignore  .gitmodules  Cargo.toml  README.md
iron/: Cargo.toml
iron/src/: main.rs
iron/src/components/: barchart.rs  connect.rs  detailmodel.rs  handler.rs  macros.rs  mod.rs  model.rs  qualitymodel.rs
iron/src/models/: mod.rs  model.rs  qualitymodel.rs
iron/ui/: appstate.slint  appwindow.slint  cusipinput.slint  data.slint  resizer.slint  securitydisplay.slint  tableadapters.slint
src/: main.rs
src/components/: connect.rs  macros.rs  mod.rs  model.rs
ui/: appwindow.slint  cusipinput.slint  tableadapters.slint
