[package]
name = "iron"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"
auctionresult = { path = "../auctionresult" }
plotters = { version = "0.3.5", default-features = false, features = ["bitmap_backend", "surface_series", "fontconfig-dlopen", "ttf"] }
chrono = "0.4.35"


[dev-dependencies]
mockito = "1.2.0"
serde_json = { version = "1", features = ["arbitrary_precision"] }

[build-dependencies]
slint-build = "1.4"
